# townsfolk

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
docs/: portrait-prompts.md  thrushcombe.md
llm/: README.md  compose.yaml  narrate.sh
ops/: README.md  build-wasm.sh  compress-portraits.sh  daily.sh  discord_bot.py  discord_event.py  discord_feed.py  discord_presence.py  discord_setup_channels.py  import_appearances.py  import_voices.py  prisoners.json  ripple.sh  thrushcombe-discord.service  thrushcombe.service  thrushcombe.timer
policies/: Cargo.toml
policies/src/: lib.rs
policy-genteel/: Cargo.toml
policy-genteel/src/: lib.rs
thrush/: Cargo.toml
thrush/src/: main.rs  wasm_engine.rs
wasm/: genteel.wasm  policies.wasm
wasm-genteel/: Cargo.toml
wasm-genteel/src/: lib.rs
wasm-policies/: Cargo.toml
wasm-policies/src/: lib.rs
web/: Cargo.toml
web/src/: main.rs
